--- a/package.json
+++ b/package.json
@@ -3,16 +3,18 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
-        "@testing-library/jest-dom": "^5.14.1",
-        "@testing-library/react": "^11.2.7",
-        "@testing-library/user-event": "^12.8.3",
+        "@testing-library/jest-dom": "^5.11.4",
+        "@testing-library/react": "^11.1.0",
+        "@testing-library/user-event": "^12.1.10",
         "bootstrap": "^5.1.0",
+        "bootstrap-icons": "^1.5.0",
+        "eslint-plugin-prettier": "^3.4.1",
         "lodash": "^4.17.15",
         "prop-types": "^15.7.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "4.0.3",
-        "web-vitals": "^1.1.2"
+        "web-vitals": "^1.0.1"
     },
     "scripts": {
         "start": "react-scripts start",
@@ -41,10 +43,13 @@
     },
     "devDependencies": {
         "eslint": "^7.32.0",
+        "eslint-config-airbnb": "^18.2.1",
         "eslint-config-standard": "^16.0.3",
         "eslint-plugin-import": "^2.24.2",
+        "eslint-plugin-jsx-a11y": "^6.4.1",
         "eslint-plugin-node": "^11.1.0",
         "eslint-plugin-promise": "^5.1.0",
-        "eslint-plugin-react": "^7.26.1"
+        "eslint-plugin-react": "^7.25.1",
+        "eslint-plugin-react-hooks": "^4.2.0"
     }
 }
